@@ -8,6 +8,9 @@ Changes since 2.9.2:
 	- can now understand incoming RP records in AXFR
 	- fixed potential crasher bug in shortened packet parsing
 	- now groks LOC records incoming/outgoing
+	- configparser now strips leading spaces in arguments
+	- improved chroot error reporting
+	- lots of bind backend work
 	
 Changes since 2.9.1:
 	- removed debugging output from the webserver (found by Paul Wouters)
